signstar-request-signature/src/ssh/snapshots/signstar_request_signature__ssh__client__tests__parsing_config_known_hosts_bad_format_number.snap
---
source: signstar-request-signature/src/ssh/client.rs
expression: error_msg
---
TOML parse error at line 6, column 16
  |
6 | known_hosts = [42]
  |                ^^
invalid type: integer `42`, expected a string
